# meetingscribe

./: .env  .env.example  .env.sample  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PROGRESSO_OTIMIZACOES.md  README.md  REORGANIZATION.md  REPO_ORGANIZATION_OVERVIEW.md  _chk_audio_dep.py  _list_dev.py  _ul  audio_recorder.py  bootstrap.py  config.py  debug_whisper.py  device_manager.py  import-google.py  main.py  pyproject.toml  quick_record.py  quick_record_test.py  record_with_status.py  requirements.txt  system_check.py  teams_integration.py  test_async_processing.py  test_chunk_optimization.py  test_file_cache.py  test_quality_improvements.py  transcribe_audio.py
.claude/: settings.local.json
archive/docs/: CLAUDE_old.md  FIX_RECORDING_PROCESS.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README_REFACTORING.md  README_old.md  SOLUCAO_FINAL.md  TESTE_AGORA.md  TESTE_FINAL.md  VERIFICAR_RAYCAST.md
archive/raycast-commands/: cache.tsx  compression.tsx  export.tsx  performance.tsx  profiling.tsx  streaming.tsx  teams-monitor.tsx  transcribe.tsx
archive/scripts/: gravar.py  gravar_debug.py  gravar_raycast.py  gravar_raycast_v2.py  quick_record.py  quick_record_old.py  record_worker.py  repo_analyzer.py  repo_analyzer.sh  simple_record.py
archive/tests/: test_auto_profiling.py  test_compression_basic.py  test_compression_integration.py  test_compression_simple.py  test_memory_management.py  (+6 more)
client/: __init__.py  cli_main.py  command_handler.py  daemon_client.py  fallback_runner.py  rich_ui.py
config/: meetingscribe_config.json
daemon/: __init__.py  daemon_main.py  fast_startup.py  memory_optimizer.py  named_pipe_server.py  service.py  service_installer.py  stdio_core.py
docs/: DEVELOPMENT.md  README.md  USER_GUIDE.md  agents_status.md  usage.md
logs/: .gitkeep
models/: .gitkeep
raycast-extension/: .eslintrc.js  .gitignore  CHANGELOG.md  FIX_SUMMARY.md  INSTALL.md  MIGRATION_NOTES.md  README.md  SETUP_GUIDE.md  SOLUTION_FILE_SAVE_FIX.md  STORE_PREPARATION.md  TROUBLESHOOTING.md  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
scripts/: bootstrap.py  import_google.py  system_check.py
src/: config.py  transcriber.py
tests/: __init__.py  test_existing_code.py
(+115 files in other folders)
