[project]
name = "meetingscribe"
version = "2.0.0"
description = "High-quality Teams meeting audio recorder via Raycast"
readme = "docs/USER_GUIDE.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "MeetingScribe Contributors" }
]
keywords = ["audio", "recording", "teams", "meetings", "wasapi", "raycast"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Sound/Audio :: Capture/Recording",
]

dependencies = [
    "pyaudiowpatch>=0.2.12.6",
    "pyaudio>=0.2.11",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psutil>=5.9.0",
    "wmi>=1.5.1",
    "pywin32>=306",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
meetingscribe = "src.cli.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/meetingscribe"
Documentation = "https://github.com/yourusername/meetingscribe/docs"
Repository = "https://github.com/yourusername/meetingscribe"
Issues = "https://github.com/yourusername/meetingscribe/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.audio", "src.teams", "src.cli"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.env.example"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.env
  | archive
  | storage
  | node_modules
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["archive/", "storage/", ".venv/"]
